# MasterOracle

./: .env.example  Cargo.toml  ENHANCED_TALLY_PHASE.md  Makefile  README.md  ULTRA_ENHANCED_FEATURES.md  package-lock.json  package.json  test-output.txt
dashboard/: README.md  blockchain-integration-example.js  dashboard-export.json  data-integration.cjs  index-fixed.html  index.html  oracle-data.json  server.cjs
integrations/evm-hardhat/: hardhat.config.ts  seda.config.ts
integrations/evm-hardhat/tasks/: deploy.ts
scripts/: post-dr.ts  post-multiple-dr.ts  quick-10-indices.ts  quick-10-stocks.ts
src/: execution_phase.rs  main.rs  tally_phase.rs
tests/: index.test.ts
